<resources>
    <string name="app_name">KhwarizmiPizza</string>
    <string name="registration">Registration</string>
    <string name="name">Your Name:</string>
    <string name="password">Password:</string>
    <string name="address">Your address:</string>
    <string name="singin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="offer">The Best Offers:</string>
    <string name="search">Search</string>
    <string name="time">Delivery Service is faster than the school Internet</string>
</resources>